--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,13 +39,4 @@ jobs:
       run: |
         python build.py
         pdflatex resume.tex
-  deploy:
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Deploy
-      run: python deploy.py
+        python deploy.py
