--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,6 +36,8 @@ jobs:
       run: pip install dropbox
 
     - name: Build project
+      env:
+        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
       run: |
         python build.py
         pdflatex resume.tex
