--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,6 +39,9 @@ jobs:
       run: |
         python build.py
         pdflatex resume.tex
+        echo "DROPBOX_ACCESS_TOKEN=${{ secrets.DROPBOX_ACCESS_TOKEN }}"
+        echo "${{ secrets.TEST }}"
+        env | grep TEST
         python deploy.py
       env:
         DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
