--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,6 +36,9 @@ jobs:
       run: pip install dropbox
 
     - name: Build project
+      env:
+        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
+        TEST: ${{ TEST }}
       run: |
         python build.py
         pdflatex resume.tex
@@ -43,5 +46,3 @@ jobs:
         echo "${{ secrets.TEST }}"
         env | grep TEST
         python deploy.py
-      env:
-        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
