--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,24 +1,17 @@
-# This is a basic workflow that is manually triggered
-
 name: Dropbox deploy workflow
+env:
+  test_var: ${{ vars.TEST_123 }}
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   push:
     branches:
       - master
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
+    
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -36,13 +29,9 @@ jobs:
       run: pip install dropbox
 
     - name: Build project
-      env:
-        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN.DROPBOX_ACCESS_TOKEN }}
-        TEST: ${{ secrets.TEST }}
       run: |
         python build.py
         pdflatex resume.tex
-        echo "DROPBOX_ACCESS_TOKEN=${{ secrets.DROPBOX_ACCESS_TOKEN }}"
-        echo "${{ secrets.TEST }}"
-        env | grep TEST
+        echo "Hello World!"
+        echo $test_var
         python deploy.py
