--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,10 +27,8 @@ jobs:
 
     - name: Build project
       env:
-        DROPBOX_ACCESS_TOKEN: ${{ vars.MY_VAR }}
+        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
       run: |
         python build.py
         pdflatex resume.tex
-        echo "Hello World!"
-        echo "env=$DROPBOX_ACCESS_TOKEN"
         python deploy.py
