--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build project
       env:
-        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
+        DROPBOX_ACCESS_TOKEN: ${{secrets.DROPBOX_OAUTH}}
       run: |
         python build.py
         pdflatex resume.tex
