--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,6 +6,10 @@ on:
 
 jobs:
   build:
+    env:
+        PDF_FILE_NAME: "resume.pdf"
+        TEX_FILE_NAME: "resume.tex"
+
     runs-on: ubuntu-latest
     steps:
     
@@ -25,10 +29,10 @@ jobs:
     - name: Install Python packages
       run: pip install dropbox
 
+    - name: Build PDF file
+      run: pdflatex $TEX_FILE_NAME
+
     - name: Build project
       env:
         DROPBOX_ACCESS_TOKEN: ${{secrets.DROPBOX_OAUTH}}
-      run: |
-        python build.py
-        pdflatex resume.tex
-        python deploy.py
+      run: python3 deploy.py
