--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,18 +21,16 @@ jobs:
       with:
         python-version: 3.13
 
-    - name: Update and install dependencies
-      run: |
-        sudo apt-get update -qq
-        sudo apt-get install -qq texlive-latex-base
+    - name: Install texlive tools (Latex)
+      run: sudo apt-get install -qq texlive-latex-base
 
-    - name: Install Python packages
+    - name: Install Dropbox Python package
       run: pip install dropbox
 
     - name: Build PDF file
       run: pdflatex $TEX_FILE_NAME
 
-    - name: Build project
+    - name: Deploy PDF file on Dropbox
       env:
         DROPBOX_ACCESS_TOKEN: ${{secrets.DROPBOX_OAUTH}}
       run: python3 deploy.py
